--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Movies</title>
+    <title style="margin-left: 20px">{%block title%} Udzlieresi site {%endblock%}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
-<body style="background-color:#011362;">
+<body style="background-color:#73cca8">
 
-<nav class="navbar navbar-expand-lg" style="background-color:#000000;">
+<nav class="navbar navbar-expand-lg" style="background-color:#369e71;">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -28,6 +28,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/profile" style="color:#0c0ca9;">profile</a>
+        </li>
+        <li class="nav-item" style="margin-left: 1030px">
+          <a class="nav-link" href="/logout" style="color:#0c0ca9;">Logout</a>
         </li>
 
       </ul>
