--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{%block title%} Movie-Home{%endblock%}
 {%  block content  %}
-<div  style="background-color:#1111c7;" >
+<div  style="background-color:#73cca8;" >
   <h1 style="color:#000000;">Most Popular Movies </h1>
 </div>
 {% for each in popular_dict%}
